add pricing faq question

--- a/website/views/pages/pricing.ejs
+++ b/website/views/pages/pricing.ejs
@@ -1192,6 +1192,15 @@
                 Anyone is free to fork the project. We are always interested to hear feedback, and we are happy to take pull requests and ideas upstream any time we can.
               </p>
             </div>
+            <div style="border-bottom: 1px solid #E2E4EA; padding-right: 20px;" class="position-relative">
+              <p id="faq__question12" style="cursor: pointer;" class="faq-question pt-3 mb-3" data-toggle="collapse" data-target="#faq__answer12" aria-controls="faq__answer12">
+                Can I buy support or services separate from Fleet Premium?
+                <span style="color: #6A67FE; right: 0; top: 24px;" class="position-absolute fa fa-angle-down"></span>
+              </p>
+              <p id="faq__answer12" class="collapse" aria-labelledby="faq__question12">
+                The only way we are able to partner as a business to provide support and build new open source and paid features is through customers purchasing Fleet Premium.
+              </p>
+            </div>
           </div>
         </div>
 
