--- a/frontend/pages/policies/PolicyPage/components/PolicyForm/_styles.scss
+++ b/frontend/pages/policies/PolicyPage/components/PolicyForm/_styles.scss
@@ -39,7 +39,7 @@
       scrollbar-width: none; /* Firefox */
     }
 
-    .name-description {
+    .name-description-resolve {
       flex-grow: 1;
       margin-right: 24px;
       .policy-form__policy-name {
@@ -48,9 +48,14 @@
         height: 2rem;
         cursor: pointer;
       }
-      .policy-form__policy-description:not(textarea) {
+      .policy-form__policy-description:not(textarea),
+      .policy-form__policy-resolution:not(textarea) {
         margin: 0.25rem 0 1rem;
         cursor: pointer;
+      }
+      #policy-description {
+        height: 20px;
+        padding-top: 1px;
       }
       textarea.policy-form__policy-description {
         margin-top: 0.8125rem;
@@ -84,8 +89,13 @@
     }
   }
 
+  &__policy-resolve {
+    margin-top: 14px;
+  }
+
   &__policy-name,
-  &__policy-description {
+  &__policy-description,
+  &__policy-resolution {
     width: 100%;
     margin: 0;
     padding: 0;
@@ -103,6 +113,10 @@
     }
   }
 
+  &__policy-resolution {
+    margin-top: $pad-small;
+  }
+
   &__policy-name {
     margin-top: $pad-large;
     font-size: $large;
@@ -112,7 +126,8 @@
     }
   }
 
-  &__policy-description {
+  &__policy-description,
+  &__policy-resolution {
     margin-top: 0;
     font-size: $x-small;
   }
