--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/_styles.scss
@@ -1,6 +1,10 @@
 .team-details {
   padding: 25px $pad-xlarge 50px; // different to pad sticky subnav properly
 
+  &.team-settings {
+    padding: $pad-xxlarge;
+  }
+
   &__loading-spinner {
     // NOTE: this value was chosen just cause it looked right. Might want to
     // come back and change it later to be more exact.
@@ -23,7 +27,6 @@
   }
 
   &__team-header {
-    margin-top: $pad-large;
     display: flex;
     justify-content: space-between;
     margin-bottom: $pad-medium;
