--- a/frontend/pages/hosts/ManageHostsPage/_styles.scss
+++ b/frontend/pages/hosts/ManageHostsPage/_styles.scss
@@ -1,9 +1,10 @@
 .manage-hosts {
   .header-wrap {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: $pad-medium;
+    height: 38px;
 
     .button-wrap {
       display: flex;
