--- a/frontend/styles/global/_global.scss
+++ b/frontend/styles/global/_global.scss
@@ -49,10 +49,9 @@ a {
 }
 
 .body-wrap {
-  padding: $pad-xxlarge 30px 0;
+  padding: $pad-xxlarge;
   border-radius: 3px;
   background-color: $core-white;
-  border: solid 1px $core-white;
   min-width: 798px;
 }
 
