Update default name and description to be empty

--- a/frontend/components/forms/fields/InputField/_styles.scss
+++ b/frontend/components/forms/fields/InputField/_styles.scss
@@ -10,8 +10,8 @@
   box-sizing: border-box;
   height: 40px;
 
-  ::placeholder {
-    color: $core-fleet-blue;
+  &::placeholder {
+    color: $ui-fleet-black-50;
   }
 
   &:focus {
