--- a/frontend/components/Modal/_styles.scss
+++ b/frontend/components/Modal/_styles.scss
@@ -14,6 +14,11 @@
 
     .input-field {
       width: 100%;
+
+      &::placeholder {
+        font-style: italic;
+        font-size: $x-small;
+      }
     }
   }
 
