--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -157,7 +157,7 @@
         That’s good news, since it means there are lots of other developers and security practicioners talking about Fleet, dreaming up features, and contributing patches.
       </p>
       <div class="tweets d-flex flex-wrap justify-content-center align-items-start px-2 pt-3 pt-lg-5 pb-5 mx-auto">
-        <div class="tweet container">
+        <div class="tweet top-row container">
           <div class="mb-4">
             <a href="https://twitter.com/osquery"><img width="140" height="36" alt="osquery logo" src="/images/social-proof-logo-osquery-140x36@2x.png"/></a>
           </div>
@@ -169,7 +169,7 @@
             </div>
           </div>
         </div>
-        <div class="tweet container">
+        <div class="tweet top-row container">
           <div class="mb-4">
             <a href="https://twitter.com/Wayfair"><img width="136" height="32" alt="Wayfair logo" src="/images/social-proof-logo-wayfair-136x32@2x.png"/></a>
           </div>
@@ -182,19 +182,19 @@
               </div>
           </div>        
         </div>
-        <div class="tweet container">
+        <div class="tweet top-row container">
           <div class="mb-4">
-            <a href="https://twitter.com/comcast"><img width="107" height="38" alt="Versia logo" src="/images/social-proof-logo-comcast-107x38.png"/></a>
+            <a href="https://twitter.com/SnowflakeDB"><img width="153" height="38" alt="Snowflake logo" src="/images/social-proof-logo-snowflake-153x38@2x.png"/></a>
           </div>
-          <p class="pb-2 mb-1">With the power of osquery, you need a scalable & resilient platform to manage your workloads. Fleet is the "just right" open-source, enterprise grade solution.</p>
+          <p class="pb-2 mb-1">My DevOps team members got Fleet set up this week, w/ data streaming via firehose to S3 buckets. This is pretty dang amazing being able to stream real data this fast. I’m very excited to see what we can build out with this. Enrolled a few boxes & streaming that sweet data.</p>
           <div class="row px-3 pt-2">
             <div>
-              <p class="font-weight-bold m-0">Abubakar Yousafzai</p>
-              <p class="m-0">Security Software Development & Engineering <a href="https://twitter.com/comcast">@Comcast</a></p>
+              <p class="font-weight-bold m-0">Tom Larkin</p>
+              <p class="m-0">IT Engineering <a href="https://twitter.com/SnowflakeDB">@Snowflake</a></p>
             </div>
           </div>
         </div>
-        <div class="tweet container">
+        <div class="tweet middle-row container">
           <div class="mb-4">
             <a href="https://twitter.com/Uber"><img width="87" height="38" alt="Uber logo" src="/images/social-proof-logo-uber-87x38@2x.png"/></a>
           </div>
@@ -206,7 +206,7 @@
             </div>
           </div>
         </div>
-        <div class="tweet container">
+        <div class="tweet middle-row container">
           <div class="mb-4">
             <a href="https://twitter.com/Square"><img width="131" height="38" alt="Square logo" src="/images/social-proof-logo-square-131x38@2x.png"/></a>
           </div>
@@ -218,7 +218,7 @@
             </div>
           </div>
         </div>
-        <div class="tweet container">
+        <div class="tweet middle-row container">
           <div class="mb-4">
             <a href="https://twitter.com/atlassian"><img width="162" height="20" alt="Atlassian logo" src="/images/social-proof-logo-atlassian-162x20@2x.png"/></a>
           </div>
@@ -230,6 +230,31 @@
             </div>
           </div>
         </div>
+        <div class="tweet bottom-row container mr-0 mr-xl-2">
+          <div class="mb-4">
+            <a href="https://twitter.com/comcast"><img width="107" height="38" alt="Comcast logo" src="/images/social-proof-logo-comcast-107x38.png"/></a>
+          </div>
+          <p class="pb-2 mb-1">With the power of osquery, you need a scalable & resilient platform to manage your workloads. Fleet is the "just right" open-source, enterprise grade solution.</p>
+          <div class="row px-3 pt-2">
+            <div>
+              <p class="font-weight-bold m-0">Abubakar Yousafzai</p>
+              <p class="m-0">Security Software Development & Engineering <a href="https://twitter.com/comcast">@Comcast</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="tweet bottom-row container ml-0 ml-xl-2">
+          <div class="mb-4">
+            <a href="https://twitter.com/versia"><img width="90" height="38" alt="Versia logo" src="/images/social-proof-logo-versia-90x38@2x.png"/></a>
+          </div>
+          <p class="pb-2 mb-1">Thanks <a href="https://twitter.com/fleetctl">@fleetctl</a> for such an awesome tool to manage <a href="https://twitter.com/osquery">@osquery</a></p>
+          <div class="row px-3 pt-2">
+            <div>
+              <p class="font-weight-bold m-0">Ruben Rodriguez</p>
+              <p class="m-0">Systems technician <a href="https://twitter.com/versia">@Versia</a></p>
+            </div>
+          </div>
+        </div>
+
       </div>
       
       <div>
