updated cloud-error & stripe-card-element component styles

--- a/website/assets/styles/components/cloud-error.component.less
+++ b/website/assets/styles/components/cloud-error.component.less
@@ -5,5 +5,12 @@
  */
 
 [parasails-component='cloud-error'] {
-  // ...
+  background: rgba(214, 108, 123, 0.2);
+  border-radius: 6px;
+  margin: 24px 0px;
+  display: flex;
+  padding: 16px;
+  p {
+    margin-block-end: 0px;
+  }
 }
