Add team filtering to software card and improve load states

--- a/frontend/pages/Homepage/cards/Software/_styles.scss
+++ b/frontend/pages/Homepage/cards/Software/_styles.scss
@@ -9,6 +9,9 @@
       vertical-align: middle;
     }
   }
+  .table-container {
+    min-height: 435px;
+  }
   .data-table__wrapper {
     overflow-x: auto;
   }
