Fix inconsistent language, clean 2 policies' sql, update line spacing

--- a/frontend/components/forms/fields/InputField/_styles.scss
+++ b/frontend/components/forms/fields/InputField/_styles.scss
@@ -1,5 +1,5 @@
 .input-field {
-  line-height: 34px;
+  line-height: 1.5;
   background-color: $ui-light-grey;
   border: solid 1px $ui-fleet-blue-15;
   border-radius: 4px;
