Show software count in dashboard's software modal

--- a/frontend/pages/Homepage/cards/Software/_styles.scss
+++ b/frontend/pages/Homepage/cards/Software/_styles.scss
@@ -22,6 +22,8 @@
     display: none;
   }
   &__software-modal {
+    width: 780px;
+
     .data-table__wrapper {
       margin-top: $pad-large;
     }
