Login, signup, forgot password, update profile

--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -1,5 +1,52 @@
 #forgot-password {
 
-  //…
+  h1 {
+    font-size: 28px;
+  }
+  a {
+    color: @core-vibrant-blue;
+  }
+  p {
+    font-size: 14px;
+  }
+  [purpose="submit-button"] {
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    span {
+      display: inline;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 14px;
+      line-height: 20px;
+      align: center;
+      font-weight: 700;
+    }
+  }
+  [purpose="back-button"] {
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: inline-block;
+    width: 200px;
+    height: 40px;
+    span {
+      color: white;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 14px;
+      line-height: 20px;
+      align: center;
+      font-weight: 700;
+    }
+  }
+
+
+  input {
+    height: 40px;
+    border-radius: 4px;
+  }
 
 }
