--- a/website/assets/styles/pages/entrance/new-password.less
+++ b/website/assets/styles/pages/entrance/new-password.less
@@ -1,5 +1,24 @@
 #new-password {
-
-  //…
+  h1 {
+    font-size: 28px;
+  }
+  .form-control {
+    height: 40px;
+  }
+  [purpose="submit-button"] {
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    span {
+      display: inline;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 14px;
+      line-height: 20px;
+      align: center;
+      font-weight: 400;
+    }
+  }
 
 }
