--- a/website/views/pages/entrance/new-password.ejs
+++ b/website/views/pages/entrance/new-password.ejs
@@ -1,25 +1,24 @@
 <div id="new-password" v-cloak>
-  <div class="container-fluid pt-5 pb-5">
-    <h1 class="text-center">Reset password</h1>
-    <div style="max-width: 450px" class="mx-auto">
-      <hr/>
-      <ajax-form action="updatePasswordAndLogin" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
-        <div class="form-group">
-          <label for="password">New password</label>
-          <input class="form-control" id="password" name="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="new-password" focus-first>
-          <div class="invalid-feedback" v-if="formErrors.password">Please enter a password.</div>
-        </div>
-        <div class="form-group">
-          <label for="confirm-password">Confirm password</label>
-          <input class="form-control" id="confirm-password" name="confirm-password" type="password"  :class="[formErrors.confirmPassword ? 'is-invalid' : '']" v-model.trim="formData.confirmPassword" placeholder="••••••••" autocomplete="new-password">
-          <div class="invalid-feedback" v-if="formErrors.confirmPassword">Your new password and confirmation do not match.</div>
-        </div>
-        <cloud-error v-if="cloudError"></cloud-error>
-        <div class="form-group">
-          <ajax-button type="submit" :syncing="syncing" class="btn btn-dark btn-lg btn-block">Submit</ajax-button>
-        </div>
-      </ajax-form>
-      <p class="text-center">Remember your password? <a href="/login">Login</a></p>
+  <div style="max-width: 450px" class="container-fluid pt-5 pb-5 mx-auto">
+      <h1 class="text-left">Change your password?</h1>
+      <div class="card card-body order-first">
+        <ajax-form action="updatePasswordAndLogin" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
+          <div class="form-group">
+            <label for="password">New password</label>
+            <input class="form-control" id="password" name="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" placeholder="••••••••" autocomplete="new-password" focus-first>
+            <div class="invalid-feedback" v-if="formErrors.password">Please enter a password.</div>
+          </div>
+          <div class="form-group">
+            <label for="confirm-password">Confirm password</label>
+            <input class="form-control" id="confirm-password" name="confirm-password" type="password"  :class="[formErrors.confirmPassword ? 'is-invalid' : '']" v-model.trim="formData.confirmPassword" placeholder="••••••••" autocomplete="new-password">
+            <div class="invalid-feedback" v-if="formErrors.confirmPassword">Your new password and confirmation do not match.</div>
+          </div>
+          <cloud-error v-if="cloudError"></cloud-error>
+
+            <ajax-button spinner purpose="submit-button" spinner="true" type="submit" :syncing="syncing" class="btn btn-info btn-lg btn-block">Submit</ajax-button>
+
+        </ajax-form>
+      </div>
     </div>
   </div>
 </div>
