--- a/website/assets/styles/components/stripe-card-element.component.less
+++ b/website/assets/styles/components/stripe-card-element.component.less
@@ -4,6 +4,9 @@
 [parasails-component='stripe-card-element'] {
   .card-element-wrapper {
     position: relative;
+    .form-control {
+      height: 40px;
+    }
     .card-element {
       padding-top: 0;
       padding-bottom: 0;
