--- a/website/assets/styles/importer.less
+++ b/website/assets/styles/importer.less
@@ -19,6 +19,7 @@
 
 // Per-component styles
 @import 'components/stripe-card-element.component.less';
+@import 'components/stripe-payment-element.component.less';
 @import 'components/ajax-button.component.less';
 @import 'components/modal.component.less';
 @import 'components/cloud-error.component.less';
@@ -43,6 +44,8 @@
 @import 'pages/404.less';
 @import 'pages/500.less';
 @import 'pages/498.less';
+@import 'pages/customers/new-license.less';
+@import 'pages/customers/dashboard.less';
 
 @import 'pages/query-detail.less';
 @import 'pages/query-library.less';
