--- a/website/assets/styles/components/modal.component.less
+++ b/website/assets/styles/components/modal.component.less
@@ -24,17 +24,21 @@
   // Custom styles for the Bootstrap modal:
   // (Want to use Bootstrap's default styles? Just comment out the rest of the rules below)
   .petticoat {
-    position: fixed;
-    width: 100%;
-    height: 75px;// should cover topbar
-    z-index: 50;
-    left: 0px;
-    top: 0px;
-    background-color: @accent-white;
+    display: none;
+    // position: fixed;
+    // width: 100%;
+    // height: 75px;// should cover topbar
+    // z-index: 50;
+    // left: 0px;
+    // top: 0px;
+    // // background-color: @accent-white;
+    // background-color: #8b8fa2;
   }
   .modal-content {
-    border-radius: 0px;
     border-color: @accent-white;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    background-clip: border-box;
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 25px;
@@ -85,8 +89,8 @@
 
 // Modal backdrop styles are exposed globally here because this gets appended to the <body>
 .modal-backdrop {
-  background-color: @accent-white;
+  background-color: #8b8fa2;
   &.show {
-    opacity: 0.95;
+    opacity: 0.45;
   }
 }
