--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -16,14 +16,59 @@
     height: 12px;
   }
 
+  [purpose="slack-button"] {
+    font-size: 14px;
+    color: @core-fleet-black;
+    border: 1px solid #C5C7D1;
+    border-radius: 4px;
+    &:hover {
+      background: #fff;
+    }
+    &:focus {
+      box-shadow: none;
+    }
+    line-height: 20px;
+    padding: 8px 40px;
+    img {
+      display: inline;
+      height: 24px;
+      width: auto;
+    }
+    &:focus {
+      box-shadow: none;
+    }
+    a {
+      color: @core-fleet-black;
+      text-decoration: none;
+    }
+  }
+  [purpose="deploy-button"] {
+    font-size: 14px;
+    line-height: 24px;
+    padding: 8px 40px;
+    border-radius: 4px;
+    a {
+      color: white;
+      text-decoration: none;
+    }
+  }
+
   .card {
     border-radius: 8px;
     box-shadow: 1px 2px 2px 0px #C5C7D133;
   }
+  [purpose="contact"] {
+    background: #F1F0FF;
+    border: 1px solid #D9D9FE;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 16px;
+    font-size: 13px;
+  }
 
   [purpose="billing-card"] {
     padding: 40px;
-    min-height: 260px;
+    min-height: 292px;
     p {
       margin-block-end: 0px;
     }
@@ -32,7 +77,7 @@
 
   [purpose="details-card"] {
     padding: 40px;
-    min-height: 260px;
+    min-height: 292px;
     hr {
       color: #E2E4EA;
     }
