--- a/frontend/components/TableContainer/_styles.scss
+++ b/frontend/components/TableContainer/_styles.scss
@@ -1,4 +1,8 @@
 .table-container {
+  .client-result-count-0 {
+    display: none;
+  }
+
   &__header {
     display: flex;
     align-items: center;
