--- a/frontend/pages/queries/QueryPage/components/QueryForm/_styles.scss
+++ b/frontend/pages/queries/QueryPage/components/QueryForm/_styles.scss
@@ -67,6 +67,7 @@
       margin-top: 24px;
       text-align: right;
       justify-content: right;
+      white-space: nowrap;
 
       b {
         text-align: right;
