--- a/frontend/pages/policies/PolicyPage/components/PolicyForm/_styles.scss
+++ b/frontend/pages/policies/PolicyPage/components/PolicyForm/_styles.scss
@@ -43,27 +43,28 @@
       flex-grow: 1;
       margin-right: 24px;
       .policy-form__policy-name {
-        margin-top: $pad-large;
+        margin: $pad-large 0;
         line-height: 2rem;
         height: 2rem;
         cursor: pointer;
       }
+      .policy-form__policy-resolve,
+      .resolve-text-wrapper {
+        margin-top: $pad-large;
+      }
       .policy-form__policy-description:not(textarea),
-      .policy-form__policy-resolution:not(textarea) {
-        margin: 0.25rem 0 1rem;
+      .policy-form__policy-resolution-button:not(textarea) {
         cursor: pointer;
       }
       #policy-description {
-        height: 20px;
-        padding-top: 1px;
+        height: 38px;
       }
       textarea.policy-form__policy-description {
         margin-top: 0.8125rem;
       }
       img {
-        transform: scale(0.5);
-        position: relative;
-        top: 6px;
+        height: 14px;
+        padding-left: $pad-small;
       }
     }
 
@@ -72,6 +73,7 @@
       margin-top: 24px;
       text-align: right;
       justify-content: right;
+      white-space: nowrap;
 
       b {
         text-align: right;
@@ -90,7 +92,7 @@
   }
 
   &__policy-resolve {
-    margin-top: 14px;
+    margin-bottom: $pad-medium;
   }
 
   &__policy-name,
