Add vertical padding to back to teams

--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/_styles.scss
@@ -19,6 +19,7 @@
     color: $core-vibrant-blue;
     font-weight: $bold;
     text-decoration: none;
+    margin: $pad-medium 0;
   }
 
   #back-chevron {
