Add id for anchor to testimonials div on website

--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -149,12 +149,12 @@
       </div>
     </div>
   </div>
-    
-  <div style="background: #F4F6FA;">
+
+  <div id="testimonials" style="background: #F4F6FA;">
     <div class="container-lg text-center justify-content-center py-5 mx-auto mt-5">
       <h3 class="px-4 mt-5 mb-3">Community driven, and built on open core technology.</h3>
       <p style="max-width: 860px" class="px-3 px-xs-5 px-md-4 mx-auto">
-        That’s good news, since it means there are lots of other developers and security practicioners talking about Fleet, dreaming up features, and contributing patches.
+        That’s good news, since it means there are lots of other developers and security practitioners talking about Fleet, dreaming up features, and contributing patches.
       </p>
       <div class="tweets d-flex flex-wrap justify-content-center align-items-start px-2 pt-3 pt-lg-5 pb-5 mx-auto">
         <div purpose="top-row" class="tweet container">
@@ -256,7 +256,7 @@
         </div>
 
       </div>
-      
+
       <div>
         <h3 class="px-4 mb-3">From small businesses to large enterprises.</h3>
         <p class="px-4">
