Refine manage hosts page to better handle timing and loading issues

--- a/frontend/components/TeamsDropdown/_styles.scss
+++ b/frontend/components/TeamsDropdown/_styles.scss
@@ -1,3 +1,10 @@
+.component__team-dropdown-wrapper {
+  &.disabled {
+    cursor: auto;
+    opacity: 0.75;
+  }
+}
+
 .component__team-dropdown {
   border: 0 !important;
   position: relative;
