--- a/frontend/styles/global/_forms.scss
+++ b/frontend/styles/global/_forms.scss
@@ -4,3 +4,10 @@
     opacity: 1;
   }
 }
+
+#app {
+  .Select.is-disabled > .Select-control {
+    background: transparent;
+    pointer-events: none;
+  }
+}
